[visualizer] fix mxdrv pcm (by opus5)